update heroku launch

--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -5,7 +5,11 @@
   "author": "Igor Amidzic",
   "license": "MIT",
   "scripts": {
-    "start": "ng serve",
-    "build": "ng build --prod"
+    "ng": "ng",
+    "start": "ng serve --proxy-config proxy.conf.json --host=0.0.0.0",
+    "build": "ng build --prod",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   }
 }
