--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\" ",
+    "start": "npm run serve",
+    "serve": "node dist/server.js",
     "heroku-postbuild": "npm run build-ts && npm run tslint  && npm run build --prefix clients/web",
     "build": "npm run build --prod --prefix clients/web",
     "watch-angular": "npm run start --prefix clients/web",
+    "watch-server": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\" ",
     "build-ts": "tsc",
     "watch-ts": "tsc -w",
     "watch-node": "nodemon dist/server.js"
