attempt heroku build

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "real-estate-manager",
+  "name": "intern-portal",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
