--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "npm run serve",
     "serve": "node dist/server.js",
-    "heroku-postbuild": "npm run build-ts && npm run build --prod --prefix client/web",
-    "build": "npm run build-ts && npm run build --prod --prefix client/web",
+    "heroku-postbuild": "npm run build-ts && npm run build --prod --prefix clients/web",
+    "build": "npm run build-ts && npm run build --prod --prefix clients/web",
     "watch-angular": "npm run start --prefix clients/web",
     "watch-server": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\" ",
     "build-ts": "tsc",
