--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "mongoose": "^5.6.5",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.9.1",
+    "ngx-pipes": "^2.6.0",
     "request": "^2.88.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
